--- a/contact2.html
+++ b/contact2.html
@@ -27,6 +27,7 @@
             Contact
         </section>
         <div>
+            <!-- found on https://www.w3schools.com/css/css_form.asp -->
                 <form action="/action_page.php">
                   <label for="fname">Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
